--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,14 +3,14 @@
     "name": "RETROVERSE EMULATOR",
     "icons": [
       {
-        "src": "/assets/favicon.webp",
+        "src": "/assets/favicon.avif",
         "sizes": "192x192",
-        "type": "image/webp"
+        "type": "image/avif"
       },
       {
-        "src": "/assets/favicon.webp",
+        "src": "/assets/favicon.avif",
         "sizes": "512x512",
-        "type": "image/webp"
+        "type": "image/avif"
       }
     ],
     "start_url": "/",
