--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "@uploadthing/react": "^7.3.0",
     "aos": "^2.3.4",
     "axios": "^1.7.9",
-    "bootstrap-icons": "^1.11.3",
     "browser-image-compression": "^2.0.2",
     "cheerio": "^1.0.0",
     "firebase": "^11.1.0",
@@ -20,6 +19,7 @@
     "next-sitemap": "^4.2.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "uploadthing": "^7.5.2"
   },
   "devDependencies": {
